--- a/Website/Homepage/Analyse/Map/index_map.html
+++ b/Website/Homepage/Analyse/Map/index_map.html
@@ -142,8 +142,8 @@
 						<option value="RATE_F">Anteil Frauen</option>
 						<option value="WORKINGAGE_RATIO">Anteil im erwerbsf&auml;higen Alter (20-64)</option>
 						<option value="YOUTH_RATIO">Anteil im Alter bis 19 Jahren</option>
-						<option value="OLD_AGE_RATIO">im Alter von 65+ Jahren</option>
-						<option value="QMPREIS_DURCH">im Alter von 85+ Jahren</option>
+						<option value="OLD_AGE_RATIO">Anteil im Alter von 65+ Jahren</option>
+						<option value="QMPREIS_DURCH">Durchschnittlicher m²-Preis</option>
             </select>
         </div>
 
@@ -190,7 +190,7 @@
 
            <h4>Administrative Grenzen</h4>
 
-           <div class="checkbox"><label><input type="checkbox" id="grenzen_checkbox"><img src="http://student.ifip.tuwien.ac.at/geoweb/2015/g03/homepage/images/Thumbnails/bezirksgrenzen.jpg"></img> Bezirksgrenzen</label></div>
+           <div class="checkbox"><label><input type="checkbox" id="grenzen_checkbox"><img src="http://student.ifip.tuwien.ac.at/geoweb/2015/g07/Homepage/images/admin_grenzen_kl.jpg"></img> Bezirksgrenzen</label></div>
 
            <h4>Erreichbarkeit</h4>
 
@@ -208,14 +208,12 @@
      <h4>Kommentare</h4>
        <div class="checkbox"><label><input type="checkbox" id="comment"> Kommentare anzeigen</label></div>
 
-        <h4>Erreichbarkeit von U-Bahn und S-Bahn</h4>
-
 
     <div id="content1">
         <div class="geoloc">
     <form id="geolocation">
      	<button type="button" name="Location" value="Current location" onclick="JavaScript:geolocate();">
-        <span aria-hidden="true"></span><img class="marker" src="http://student.ifip.tuwien.ac.at/geoweb/2015/g04/homepage/ue3_hoc/marker_rot_sized.png"></img> Geolocation</button>
+        <span aria-hidden="true"></span><img class="marker" src="http://student.ifip.tuwien.ac.at/geoweb/2015/g07/Ue5/map_marker_blue.png"></img> Geolocation</button>
         </div>
         <div class="checkbox"><label><input type="checkbox" id="comment"> Feedback Kommentare</label></div>
 
