--- a/Website/Homepage/Analyse/analyse.htm
+++ b/Website/Homepage/Analyse/analyse.htm
@@ -45,98 +45,18 @@
 			Merkmale wie Citybike-Stationen, &Ouml;V-Stationen etc. ausw&auml;hlen, welche punktuell dargestellt werden.
 			Zus&auml;tzlich wird die Bev&ouml;lkerungsdichte auf Bezirksebene fl&auml;chig dargestellt, damit die dicht besiedelten R&auml;ume klar ersichtlich sind,
  			falls sich die Betriebe dort ansiedeln wollen.<br>
+			<br>
+			Verwendete Daten:
+			<p><a href="https://open.wien.gv.at/site/open-data/" target="_blank" class="main">https://open.wien.gv.at/site/open-data/</a></p>
 
 			<h2>Karte</h2>
 			<a href="http://student.ifip.tuwien.ac.at/geoweb/2015/g07/Homepage/analyse/map/index_map.html"
-			target="_blank" class="main"> hier gehts zur Erreichbarkeitsanalyse!</a> </p>
+			target="_blank" class="main">hier gehts zur Erreichbarkeitsanalyse!</a> </p>
 			<!--Navigationsleiste-->
-			<form id="searchform">
-			  <input name="search" size="60" type="text" placeholder="Search, e.g. 'Vienna', 'Karlsplatz 13, Wien'">
-			  <input type="submit" value="Search"><button id="relocate">Back to my Location</button><br>
-			</form>
+
 
 			<!--Karte-->
-			<div id="map">
-			<script>
-			var marker = new ol.Feature();
-			var map = new ol.Map({
-			  target: 'map',
-			  layers: [
-			      new ol.layer.Tile({
-			      source: new ol.source.OSM()
-			      }),
-			      new ol.layer.Vector({
-			    	source: new ol.source.Vector({
-			    	features: [marker]
-			    	}),
 
-			      style: new ol.style.Style ({
-			      image: new ol.style.Icon(({
-			          anchor: [0.5, 0.9],
-			          scale: 0.15,
-			          anchorXUnits: 'fraction',
-			          anchorYUnits: 'fraction',
-			          opacity: 0.75,
-			      src: 'http://student.ifip.tuwien.ac.at/geoweb/2015/g07/Ue5/map_marker_blue.png'
-			      }))
-			      })
-			      })
-			        ],
-
-			        view: new ol.View({
-			     center: ol.proj.transform([16.373, 48.208], 'EPSG:4326', 'EPSG:3857'), zoom: 15,
-			     })
-			     });
-
-
-			var geolocation = new ol.Geolocation({
-			  projection: map.getView().getProjection(),
-			  tracking: true
-			});
-			geolocation.once('change:position', function(evt) {
-			  map.getView().setCenter(geolocation.getPosition());
-			  marker.setGeometry(new ol.geom.Point(map.getView().getCenter()));
-			  });
-
-			var form = document.getElementById('searchform');
-			form.onsubmit = function(evt) {
-			  evt.preventDefault();
-			  var q = form.search.value;
-			  var url = 'http://nominatim.openstreetmap.org/search?format=json&q=' + q;
-			  var xhr = new XMLHttpRequest();
-			  xhr.open('GET', url);
-			  xhr.onload = function() {
-			    var result = JSON.parse(xhr.responseText);
-			    if (result.length > 0) {
-			      var first = result[0];
-			      form.search.value = first.display_name;
-			      map.getView().setCenter(ol.proj.fromLonLat([
-			        parseFloat(first.lon),
-			        parseFloat(first.lat)
-
-			      ]));
-			      marker.setGeometry(new ol.geom.Point(map.getView().getCenter()));
-			    }
-			  };
-			  xhr.send();
-			};
-
-			var button =document.getElementById('relocate');
-			button.addEventListener ('click', relocatepos);
-			          function relocatepos() {
-			            var geolocation2 = new ol.Geolocation({
-			              projection: map.getView().getProjection(),
-			              tracking: true
-			              });
-			            geolocation.once('change:position', function(evt) {
-			            map.getView().setCenter(geolocation.getPosition());
-			            marker.setGeometry(new ol.geom.Point(map.getView().getCenter()));
-			            });
-			      }
-
-
-			</script>
-			</div>
 		</div>
 		<div id="footer">
 		<p class="foot">
